# ChangeLog for media-libs/a52dec
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/a52dec/ChangeLog,v 1.48 2006/09/27 08:38:17 flameeyes Exp $

  27 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> a52dec-0.7.4-r3.ebuild,
  a52dec-0.7.4-r5.ebuild:
  Force latest version of autoconf/automake. Closes bug #149179.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> a52dec-0.7.4-r5.ebuild:
  Marked stable on mips.

  25 May 2006; Diego Pettenò <flameeyes@gentoo.org> a52dec-0.7.4-r5.ebuild:
  Add ~x86-fbsd keyword.

  25 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/a52dec-0.7.4-build.patch, a52dec-0.7.4-r5.ebuild:
  Rice it down, don't add extra flags to the build, like the deprecated -mtune
  or -O3 -fomit-frame-pointer.

  04 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> a52dec-0.7.4-r3.ebuild,
  a52dec-0.7.4-r5.ebuild:
  Change old ebuild to use autotools eclass/eautoreconf; remove dependency
  over automake/autoconf as they are set by autotools eclass.

  25 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> -a52dec-0.7.4.ebuild,
  -a52dec-0.7.4-r4.ebuild:
  Cleanup of old versions.

  13 Sep 2005; Diego Pettenò <flameeyes@gentoo.org> a52dec-0.7.4-r5.ebuild:
  Use autotools eclass to clean up output during unpack phase. Fix dependency
  over autoconf/automake.

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org> a52dec-0.7.4-r5.ebuild:
  Mark 0.7.4-r5 stable on alpha

  11 Aug 2005; Stefan Briesenick <sbriesen@gentoo.org>
  files/a52dec-0.7.4-freebsd.patch:
  changing absolute path to relative in freebsd.patch, if you're using a
  non-standard portage-temp location, patching would fail.

  11 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  a52dec-0.7.4-r5.ebuild:
  Stable on sparc

  11 Aug 2005; Olivier Crête <tester@gentoo.org> a52dec-0.7.4-r5.ebuild:
  Stable on x86 to satisfy xine-lib-1.0.1-r3 for bug #98805

  29 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>