@@ -10,32 +10,25 @@ MD5 07169672c7df9a4e744c99e729d9c652 files/a52dec-0.7.4-freebsd.patch 343
 RMD160 29981d434e6d1fcbbceb36a6200554302d4ef898 files/a52dec-0.7.4-freebsd.patch 343
 SHA256 61a2852445843dcb3cee283cbcd44ce28a1e5d018f60879ba8e8de184668367d files/a52dec-0.7.4-freebsd.patch 343
 DIST a52dec-0.7.4.tar.gz 241507 RMD160 5b63b34c5840e7182b733cad41e916a8d4875eb1 SHA1 79b33bd8d89dad7436f85b9154ad35667aa37321 SHA256 a21d724ab3b3933330194353687df82c475b5dfb997513eef4c25de6c865ec33
-EBUILD a52dec-0.7.4-r3.ebuild 1164 RMD160 30cbde14f598c0cff4b5cfe1a23ab38c2400d5ef SHA1 bab0fe2aecc0ebcfb4cf394a273f0fbdf22dabc4 SHA256 8b2baf99793acaded0cae2aaaabc68e38eb792edd6aa9d65d516a1c899e5802c
-MD5 013c5493d45e001b0823032c3cf84025 a52dec-0.7.4-r3.ebuild 1164
-RMD160 30cbde14f598c0cff4b5cfe1a23ab38c2400d5ef a52dec-0.7.4-r3.ebuild 1164
-SHA256 8b2baf99793acaded0cae2aaaabc68e38eb792edd6aa9d65d516a1c899e5802c a52dec-0.7.4-r3.ebuild 1164
 EBUILD a52dec-0.7.4-r5.ebuild 1262 RMD160 7b2f30c86350b54bf70ab18b3346784564826a35 SHA1 faf2af8dafd4318ea0b9e44cfb9e822fae6638f7 SHA256 d16235ec171ffa909c45f3ab366dcb072756db51f769e89fea173a1fcab56b90
 MD5 13341c15bf240460c5bbba861f3adfef a52dec-0.7.4-r5.ebuild 1262
 RMD160 7b2f30c86350b54bf70ab18b3346784564826a35 a52dec-0.7.4-r5.ebuild 1262
 SHA256 d16235ec171ffa909c45f3ab366dcb072756db51f769e89fea173a1fcab56b90 a52dec-0.7.4-r5.ebuild 1262
-MISC ChangeLog 6848 RMD160 3eae8c5ea3afe2ab0141ab3e804c5965414efaf2 SHA1 5ecdeeef7e3e694c6f5529ac96bdaeccec990cb5 SHA256 a8c7f773fd1e5d9e83b228b95083830c8a7c828c9ed0e31b92fb88209bf92ff4
-MD5 8a4d2c315193ee5777399feb06550616 ChangeLog 6848
-RMD160 3eae8c5ea3afe2ab0141ab3e804c5965414efaf2 ChangeLog 6848
-SHA256 a8c7f773fd1e5d9e83b228b95083830c8a7c828c9ed0e31b92fb88209bf92ff4 ChangeLog 6848
+MISC ChangeLog 6951 RMD160 54dc76c7da585efd35d5279c188b9078ce6d75e3 SHA1 77a34cfecba774fb06a309ec5b0ed91daf841b64 SHA256 df528c8bd7408b295cf181e7b7d163722763b1f491b2e1dcd248bfc6b6e48fa4
+MD5 03f770e736c83d02c84e061c493098aa ChangeLog 6951
+RMD160 54dc76c7da585efd35d5279c188b9078ce6d75e3 ChangeLog 6951
+SHA256 df528c8bd7408b295cf181e7b7d163722763b1f491b2e1dcd248bfc6b6e48fa4 ChangeLog 6951
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e metadata.xml 158
 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b metadata.xml 158
-MD5 f48ecc1e9b828c6406b0463ab5938f82 files/digest-a52dec-0.7.4-r3 238
-RMD160 4e0d97bfb3f2630bf0f8dcac9e1d9eaa6513f313 files/digest-a52dec-0.7.4-r3 238
-SHA256 111255b4667369af824f70a9c0a315c4fd4e152f1f0b5472ea13326d0a471ff6 files/digest-a52dec-0.7.4-r3 238
 MD5 f48ecc1e9b828c6406b0463ab5938f82 files/digest-a52dec-0.7.4-r5 238
 RMD160 4e0d97bfb3f2630bf0f8dcac9e1d9eaa6513f313 files/digest-a52dec-0.7.4-r5 238
 SHA256 111255b4667369af824f70a9c0a315c4fd4e152f1f0b5472ea13326d0a471ff6 files/digest-a52dec-0.7.4-r5 238
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFGjiIAiZjviIA2XgRApiBAJ97ES37xmyXniPCJLY6yYqKt2GjJQCeMcFY
-/Ex7Dbz7d0ikUdHJZASvReQ=
-=SQ4r
+iD8DBQFFs7P1AiZjviIA2XgRAurgAKDlZlHU7OttJB08OZis+V5MoXpk5QCg9M6T
+1mNhoOANuqnImbri+HjSvBA=
+=XN4f
 -----END PGP SIGNATURE-----
