@@ -1,3 +1,0 @@
-MD5 caa9f5bc44232dc8aeea773fea56be80 a52dec-0.7.4.tar.gz 241507
-RMD160 5b63b34c5840e7182b733cad41e916a8d4875eb1 a52dec-0.7.4.tar.gz 241507
-SHA256 a21d724ab3b3933330194353687df82c475b5dfb997513eef4c25de6c865ec33 a52dec-0.7.4.tar.gz 241507
