@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/a52dec
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/a52dec/ChangeLog,v 1.48 2006/09/27 08:38:17 flameeyes Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/a52dec/ChangeLog,v 1.49 2007/01/21 18:41:51 flameeyes Exp $
+
+  21 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
+  -a52dec-0.7.4-r3.ebuild:
+  Remove old verison.
 
   27 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> a52dec-0.7.4-r3.ebuild,
   a52dec-0.7.4-r5.ebuild:
